IE overflow bug fix.

--- a/edu.cmu.scs.azurite/html/style/style.css
+++ b/edu.cmu.scs.azurite/html/style/style.css
@@ -81,6 +81,8 @@ padding: 5px;
 -moz-box-sizing:    border-box;
 -webkit-box-sizing: border-box;
 box-sizing:         border-box;
+
+overflow: hidden;
 }
 
 #svg_inner_wrapper {
